--- a/src/components/SunsetContainer/sunset-container.css
+++ b/src/components/SunsetContainer/sunset-container.css
@@ -1,3 +1,3 @@
 .sunset-bg {
-    background-image: url("../../assets/background.jpg");
+    background-image: url("../../assets/sunset-sq.gif");
 }
