fix: fix layout

--- a/src/components/MessagePresenter/message-presenter.css
+++ b/src/components/MessagePresenter/message-presenter.css
@@ -1,7 +1,7 @@
 div.text-transition > div {
     width: 100% !important;
-}
-
-div.text-transition {
-    transform: translateY(-50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #4B4549;
 }
