--- a/src/components/Video/video.css
+++ b/src/components/Video/video.css
@@ -3,6 +3,6 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 500px;
+    min-height: 500px;
     border-radius: 100% 100% 0 0;
 }
