--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@
 * {
     font-family: 'Chonburi', cursive;
 }
+
+.publisher-box {
+    background-image: url("./assets/background.png");
+    background-size: cover;
+}
+
+@supports (padding:max(0px)) {
+    body, header, footer {
+        padding-left: min(0vmin, env(safe-area-inset-left));
+        padding-right: min(0vmin, env(safe-area-inset-right));
+    }
+}
