--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,25 @@
         padding-right: min(0vmin, env(safe-area-inset-right));
     }
 }
+
+.cross-fade-leave {
+    opacity: 1;
+}
+
+.cross-fade-leave.cross-fade-leave-active {
+    opacity: 0;
+    transition: opacity 1s ease-in;
+}
+
+.cross-fade-enter {
+    opacity: 0;
+}
+
+.cross-fade-enter.cross-fade-enter-active {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+}
+
+.cross-fade-height {
+    transition: height 0.5s ease-in-out;
+}
